--- a/frontend/index.html
+++ b/frontend/index.html
@@ -181,7 +181,7 @@
 
                <div class="twelve columns">
 
-                  <h3>A Cloud Guru</h3>
+                  <h3>projeeeeeet</h3>
                   <p class="info">Associate Community Training Architect <span>&bull;</span> <em class="date">November 2020 - Present</em></p>
 
                   <p>
