--- a/frontend/index.html
+++ b/frontend/index.html
@@ -181,11 +181,15 @@
 
                <div class="twelve columns">
 
-                  <h3>projeeeeeet</h3>
-                  <p class="info">Associate Community Training Architect <span>&bull;</span> <em class="date">November 2020 - Present</em></p>
+                  <h3>MyResumeWithAzure</h3>
+                  <p class="info">Personal Project <span>&bull;</span> <em class="date">November 2022</em></p>
 
                   <p>
-                  <li>Creating awesome cloud computing content.</li> 
+                  <li>Building my resume integrated into GitHub and hosted on Microsoft Azure .</li>
+                  <li>Deploying Azure Function to Azure </li>
+                  <li>Deploying static website to Blob storage </li>
+                  <li>Building a CI/CD pipeline: create frontend and backend workflows. </li>
+                  <li>Tools: Blob Storage, Azure Functions, CosmosDB, Git  </li>
                   </p>
 
                </div>
@@ -196,67 +200,69 @@
 
                <div class="twelve columns">
 
-                  <h3>Powwr | A Cognitive Energy Company</h3>
-                  <p class="info">Cloud Engineer <span>&bull;</span> <em class="date">May 2019 - August 2020</em></p>
+                  <h3>CI/CD Pipeline for e-commerce App</h3>
+                  <p class="info">Personal Project <span>&bull;</span> <em class="date">November 2022</em></p>
 
                   <p>
-                     <li>Developed cloud native solutions in Azure</li>
-                     <li>CI/CD with Azure DevOps</li>
-                     <li>Full stack .NET development</li>
+                     <li>Continuous integration and automation with Jenkins Pipeline.</li>
+                     <li>Check the quality of the source code using Sonarqube. </li>
+                     <li>Continuous delivery by creating Docker image generated with Dockerfile and dropping it on DockerHub </li>
+                     <li>Data tracking and visualization with prometheus and Grafana. </li>
+                     <li>Tools: Docker, Jenkins, Sonarqube, Grafana, Prometheus, Mysql, PHP.  </li>
                   </p>
 
                </div>
 
             </div> <!-- item end -->
-
             <div class="row item">
 
                <div class="twelve columns">
 
-                  <h3>Powwr | A Cognitive Energy Company</h3>
-                  <p class="info">System Administrator <span>&bull;</span> <em class="date">September 2018 - May 2019</em></p>
+                  <h3>MART IOT NODE SOLUTION FOR PREDICTIVE MAINTENANCE OF MACHINES IN INDUSTRY 4.0</h3>
+                  <p class="info">Academic Project <span>&bull;</span> <em class="date">Jan 2022 - jun 2022</em></p>
 
                   <p>
-                  <li>Atlassian suite administration</li>
-                  <li>O365 suite administration</li>
-                  <li>SQL server 2019 administration</li>
-                  <li>Azure infrastructure administration</li>
-                  </p>
-
-               </div>
-
-            </div> <!-- item end -->
-
-            <div class="row item">
-
-               <div class="twelve columns">
-
-                  <h3>Tech Boston</h3>
-                  <p class="info">Help Desk Analyst <span>&bull;</span> <em class="date">October 2016 - August 2018</em></p>
-
-                  <p>
-                  <li>Front line help desk IT support</li>
-                  </p>
-
-               </div>
-
-            </div> <!-- item end -->
-
-            <div class="row item">
-
-               <div class="twelve columns">
-
-                  <h3>Apple Danbury</h3>
-                  <p class="info">Mobile tech <span>&bull;</span> <em class="date">December 2014 - August 2016</em></p>
-
-                  <p>
-                  <li>Repaired software and hardware issues related to iOS devices</li>
+                  <li>Collecting and cleaning data and creating AI models.</li> 
+                  <li>Déploiment de modéle sur la carte et visualisation des résultats sur le cloud.</li>
+                  <li>Tools: C, Python, Tensorflow, Keras, STM32L475E, Thingspeak</li>
                   
                   </p>
 
                </div>
 
             </div> <!-- item end -->
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>DEVELOPMENT OF A PART-TIME JOB APPLICATION</h3>
+                  <p class="info">Academic Project <span>&bull;</span> <em class="date">Januray 2021 - March 2021</em></p>
+
+                  <p>
+                  <li>Tools: Flutter, Firebase, Android studio, UML</li>
+                  </p>
+
+               </div>
+
+            </div> <!-- item end -->
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>DESIGN AND CREATION OF A RELATIONAL DATABASE FOR AN AIRLINE COMPANY USING ORACLE SQL DEVELOPER</h3>
+                  <p class="info">Academic Project <span>&bull;</span> <em class="date">Oct 2020 - Jan 2021</em></p>
+
+                  <p>
+                  <li>Tools: Oracle SQL Developer, UML</li>
+                  </p>
+
+               </div>
+
+            </div> <!-- item end -->
+
+            
 
          </div> <!-- main-col end -->
 
